FIx footer z-index. Added about section. Added button in projects. Modified some styles. Refactored social links.

--- a/src/global.css
+++ b/src/global.css
@@ -6,10 +6,10 @@
   --background: oklch(0.28 0.0559 282.1);
   --background-hover: oklch(0.36 0.0777 289.59);
   --foreground: oklch(0.98 0.0017 247.84);
-  --primary: oklch(0.98 0.0017 247.84);
+  --primary: oklch(0.99 0.0017 247.84);
   --primary-foreground: oklch(0.3 0.05 264);
   --secondary: oklch(0.3 0.0629 281.93);
-  --secondary-foreground: oklch(0.89 0.0125 247.97);
+  --secondary-foreground: oklch(0.90 0.0125 247.97);
   --muted: oklch(0.44 0.0986 289.35);
   --muted-hover: oklch(0.47 0.10 289);
   --muted-foreground: oklch(0.85 0.0167 261.49);
@@ -110,7 +110,7 @@
 }
 
 .spin {
-  animation: spin 8s linear infinite;
+  animation: spin 12s linear infinite;
 }
 
 @keyframes spin {
